setup for snapp project

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,6 +1,6 @@
 
-$color-primary: #896E3E;
-$color-secondary: #3E6189;
+$color-primary: #239A93;
+$color-secondary: #9A4B23;
 $color-black: #231f20;
 
 $color-gradient-start: $color-secondary;
