--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -6,4 +6,5 @@ $color-black: #231f20;
 $color-gradient-start: $color-secondary;
 $color-gradient-end: mix( $color-primary, $color-secondary, 75%);
 
-$color-error: #893E3E;
+$color-error: #B81A1A;
+$color-success: #109B16;
