before, ongoing and after situations

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -8,3 +8,4 @@ $color-gradient-end: mix( $color-primary, $color-secondary, 75%);
 
 $color-error: #B81A1A;
 $color-success: #109B16;
+$color-info: #10619B;
