--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,6 +1,6 @@
 
-$color-primary: #239A93;
-$color-secondary: #9A4B23;
+$color-primary: #25A29A;
+$color-secondary: #A35026;
 $color-black: #231f20;
 
 /*
